--- a/todoist_custom_filter.html
+++ b/todoist_custom_filter.html
@@ -14,7 +14,7 @@ function myFunction(bComputer) {
   }
   time_labels = ["short","10min","20min","30min","long"];
   energy_labels = ["low_energy", "high_energy"];
-  context_labels = ["home","anywhere","bujo","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop", "Emma"];
+  context_labels = ["home","anywhere","bujo","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop", "Emma", "printer"];
   due_labels = ["overdue", "due today", "due within 3 days", "no due date", "created last 2 days", "created last 4 days"];
   due_searches = ["over due", "due today", "3 days", "no date", "created after: -2 days", "created after: -4 days"];
   project_labels = ["PERSOONLIJK","LIME", "ASML_project", "selfdev_mathware", "INBOX & @werk", "INBOX & !@werk"];
@@ -169,6 +169,7 @@ function anyTrue(labels) {
 			  <li><label><input type="checkbox" id="asml_laptop"> ASML laptop </label></li>
 			  <li><label><input type="checkbox" id="sioux_laptop"> Sioux laptop </label></li>
 			  <li><label><input type="checkbox" id="Emma"> Emma </label></li>
+			  <li><label><input type="checkbox" id="printer"> printer </label></li>
 			  </br>
 			  <li><label><input type="checkbox" id="overdue"> overdue </label></li>
 			  <li><label><input type="checkbox" id="due today"> due today </label></li>
