changing button size

--- a/todoist_custom_filter.html
+++ b/todoist_custom_filter.html
@@ -143,10 +143,8 @@ function anyTrue(labels) {
           -->
           <legend>Todoist filter options</legend>
 		  <div>
-            <button type="button" onclick="myFunction(1)"> submit@pc </button>
-          </div>
-		  <div>
-            <button type="button" onclick="myFunction(0)"> submit@phone </button>
+            <button type="button" onclick="myFunction(1)" style="width:200px;height:40px;"> submit@pc </button>
+            <button type="button" onclick="myFunction(0)" style="width:200px;height:40px;"> submit@phone </button>
           </div>
           <div>
             
