fixing low and high energy

--- a/todoist_custom_filter.html
+++ b/todoist_custom_filter.html
@@ -13,7 +13,7 @@ function myFunction(bComputer) {
 	alt_url = computer_url;
   }
   time_labels = ["short","10min","20min","30min","long"];
-  energy_labels = ["low_energy", "high_energy"];
+  energy_labels = ["lowenergy", "highenergy"];
   context_labels = ["home","anywhere","bujo","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop", "Emma", "printer"];
   due_labels = ["overdue", "due today", "due within 3 days", "no due date", "created last 2 days", "created last 4 days"];
   due_searches = ["over due", "due today", "3 days", "no date", "created after: -2 days", "created after: -4 days"];
@@ -155,8 +155,8 @@ function anyTrue(labels) {
 			  <li><label><input type="checkbox" id="30min"> 30min</label></li>
 			  <li><label><input type="checkbox" id="long"> long </label></li>
 			  </br>
-			  <li><label><input type="checkbox" id="high_energy"> high_energy </label></li>
-              <li><label><input type="checkbox" id="low_energy"> low_energy </label></li>
+			  <li><label><input type="checkbox" id="highenergy"> high_energy </label></li>
+              <li><label><input type="checkbox" id="lowenergy"> low_energy </label></li>
 			  </br>
               <li><label><input type="checkbox" id="home"> home </label></li>
 			  <li><label><input type="checkbox" id="anywhere"> anywhere </label></li>
