--- a/todoist_custom_filter.html
+++ b/todoist_custom_filter.html
@@ -12,7 +12,7 @@ function myFunction(bComputer) {
 	base_url = phone_url;
 	alt_url = computer_url;
   }
-  time_labels = ["short","10min","20min","30min","long"];
+  time_labels = ["short","medium","long"];
   focus_labels = ["lowfocus", "highfocus"];
   energy_labels = ["lowenergy", "highenergy"];
   context_labels = ["home","anywhere","bujo","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop", "Emma", "printer"];
@@ -151,9 +151,7 @@ function anyTrue(labels) {
             
             <ul>
               <li><label><input type="checkbox" id="short"> short</label></li>
-              <li><label><input type="checkbox" id="10min"> 10min</label></li>
-              <li><label><input type="checkbox" id="20min"> 20min</label></li>
-			  <li><label><input type="checkbox" id="30min"> 30min</label></li>
+              <li><label><input type="checkbox" id="medium"> medium (10-60min)</label></li>
 			  <li><label><input type="checkbox" id="long"> long </label></li>
 			  </br>
 			  <li><label><input type="checkbox" id="highfocus"> high_focus </label></li>
