adding harmonicamap to contexts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ function myFunction(bComputer) {
   time_labels = ["short","medium","long"];
   focus_labels = ["inactiveattention", "activeattention", "proactiveattention"];
   energy_labels = ["lowenergy", "mediumenergy", "highenergy"];
-  context_labels = ["home","anywhere","bujo","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop", "Emma", "printer"];
+  context_labels = ["home","anywhere","bujo","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop", "Emma", "printer","harmonicamap"];
   due_labels = ["overdue", "due today", "due within 3 days", "no due date", "recurring", "created last 2 days", "created last 4 days"];
   due_searches = ["over due", "due today", "3 days", "no date", "recurring", "created after: -2 days", "created after: -4 days"];
   next_action_label = ["next_action","wachten","none"];
@@ -178,6 +178,7 @@ function anyTrue(labels) {
 			  <li><label><input type="checkbox" id="sioux_laptop"> Sioux laptop </label></li>
 			  <li><label><input type="checkbox" id="Emma"> Emma </label></li>
 			  <li><label><input type="checkbox" id="printer"> printer </label></li>
+			  <li><label><input type="checkbox" id="harmonicamap"> harmonicamap </label></li>
 			  </br>
 			  <li><label><input type="checkbox" id="overdue"> overdue </label></li>
 			  <li><label><input type="checkbox" id="due today"> due today </label></li>
