--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ function myFunction(bComputer) {
   focus_labels = ["inactiveattention", "activeattention", "proactiveattention"];
   energy_labels = ["lowenergy", "mediumenergy", "highenergy"];
   res_labels = ["lowres", "mediumres", "highres"];
-  context_labels = ["home","anywhere","bujo","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop", "Emma", "printer","harmonicamap"];
+  context_labels = ["home","anywhere","bujo","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop", "Emma", "printer","bouwmarkt","errands"];
   due_labels = ["overdue", "due today", "due within 3 days", "no due date", "recurring", "created last 2 days", "created last 4 days"];
   due_searches = ["over due", "due today", "3 days", "no date", "recurring", "created after: -2 days", "created after: -4 days"];
   next_action_label = ["next_action","wachten","none"];
@@ -196,7 +196,8 @@ function anyTrue(labels) {
 			  <li><label><input type="checkbox" id="sioux_laptop"> Sioux laptop </label></li>
 			  <li><label><input type="checkbox" id="Emma"> Emma </label></li>
 			  <li><label><input type="checkbox" id="printer"> printer </label></li>
-			  <li><label><input type="checkbox" id="harmonicamap"> harmonicamap </label></li>
+			  <li><label><input type="checkbox" id="bouwmarkt"> bouwmarkt </label></li>
+			  <li><label><input type="checkbox" id="errands"> errands </label></li>
 			  </br>
 			  <li><label><input type="checkbox" id="overdue"> overdue </label></li>
 			  <li><label><input type="checkbox" id="due today"> due today </label></li>
