--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ function myFunction(bComputer) {
   time_labels = ["short","medium","long"];
   focus_labels = ["inactiveattention", "activeattention", "proactiveattention"];
   energy_labels = ["lowenergy", "mediumenergy", "highenergy"];
-  res_labels = ["lowres", "mediumres", "highres"];
+  res_labels = ["fun","lowres", "mediumres", "highres"];
   context_labels = ["home","anywhere","bujo","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop", "Emma", "printer","bouwmarkt","errands"];
   due_labels = ["overdue", "due today", "due within 3 days", "no due date", "recurring", "created last 2 days", "created last 4 days"];
   due_searches = ["over due", "due today", "3 days", "no date", "recurring", "created after: -2 days", "created after: -4 days"];
@@ -180,6 +180,7 @@ function anyTrue(labels) {
 			  <li><label><input type="checkbox" id="highres"> high resistance </label></li>
 			  <li><label><input type="checkbox" id="mediumres"> medium resistance </label></li>
               <li><label><input type="checkbox" id="lowres"> low resistance </label></li>
+			  <li><label><input type="checkbox" id="fun"> fun </label></li>
 			  </br>
 			  <li><label><input type="checkbox" id="no-energy"> no energy </label></li>
 			  <li><label><input type="checkbox" id="no-res"> no res </label></li>
