adding contexts: homeFreeHands, PieterVera, removing bujo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ function myFunction(bComputer) {
 	base_url = phone_url;
 	alt_url = computer_url;
   }
-  context_labels = ["home","anywhere","telefoon","notebook","audio","Sophie","bujo","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop","prive_laptop","Emma", "printer","bouwmarkt","errands"];
+  context_labels = ["home","homeFreeHands","anywhere","telefoon","notebook","audio","Sophie","PieterVera","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop","prive_laptop","Emma", "printer","bouwmarkt","errands"];
   due_labels = ["overdue", "due today", "due within 3 days", "no due date", "recurring", "created last 2 days", "created last 4 days"];
   due_searches = ["over due", "due today", "3 days", "no date", "recurring", "created after: -2 days", "created after: -4 days"];
   next_action_label = ["next_action","wachten","none","fun"];
@@ -168,12 +168,13 @@ function anyTrue(labels) {
 			  <li><label><input type="checkbox" id="fun"> fun</label></li>
 			  </br>
               <li><label><input type="checkbox" id="home"> home </label></li>
+			  <li><label><input type="checkbox" id="homeFreeHands"> homeFreeHands </label></li>
 			  <li><label><input type="checkbox" id="anywhere"> anywhere </label></li>
 			  <li><label><input type="checkbox" id="telefoon"> telefoon </label></li>
 			  <li><label><input type="checkbox" id="notebook"> notebook </label></li>
 			  <li><label><input type="checkbox" id="audio"> audio </label></li>
 			  <li><label><input type="checkbox" id="Sophie"> Sophie </label></li>
-			  <li><label><input type="checkbox" id="bujo"> bujo </label></li>
+			  <li><label><input type="checkbox" id="PieterVera"> PieterVera </label></li>
 			  <li><label><input type="checkbox" id="eindhoven"> eindhoven </label></li>
 			  <li><label><input type="checkbox" id="Sioux"> Sioux </label></li>
 			  <li><label><input type="checkbox" id="laptop"> laptop </label></li>
