--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ function myFunction(bComputer) {
   context_labels = ["home","homeFreeHands","anywhere","telefoon","notebook","audio","Sophie","PieterVera","eindhoven","Sioux","laptop","asml_laptop","sioux_laptop","prive_laptop","Emma", "printer","bouwmarkt","errands"];
   due_labels = ["overdue", "due today", "due within 3 days", "no due date", "recurring", "created last 2 days", "created last 4 days"];
   due_searches = ["over due", "due today", "3 days", "no date", "recurring", "created after: -2 days", "created after: -4 days"];
-  next_action_label = ["next_action","wachten","none","fun"];
-  next_action_searches = ["@next_action","@wachten","(!@next_action & !@wachten)","@fun"]; 
+  next_action_label = ["next_action","wachten","none","fun","AnyLooseActions","AnyTickler"];
+  next_action_searches = ["@next_action","@wachten","(!@next_action & !@wachten)","@fun","(#PrivateLooseActions | #WorkLooseActions)","(#PrivateTickler | #WorkTickler)"]; 
   project_labels = ["LooseActions","TICKLER","PERSOONLIJK","LIME", "ASML_project", "selfdev_mathware", "INBOX & @werk", "INBOX & !@werk", "PrioProjects", "AreaOfResponsibility"];
   project_searches = ["#LooseActions","#TICKLER","##PERSOONLIJK","##LIME", "##ASML_project", "##selfdev_mathware", "#Inbox & @werk", "#inbox & !@werk","##PrioProjects", "##AreaOfResponsibility"];
   exclusion_labels = ["!PrivateResources","!Work","!CustomCollections","niet routines","nonfun","!OUD","!reviewdit"];
@@ -166,6 +166,8 @@ function anyTrue(labels) {
 			  <li><label><input type="checkbox" id="wachten"> wachten</label></li>
 			  <li><label><input type="checkbox" id="none"> geen van beide</label></li>
 			  <li><label><input type="checkbox" id="fun"> fun</label></li>
+			  <li><label><input type="checkbox" id="AnyLooseActions"> AnyLooseActions</label></li>
+			  <li><label><input type="checkbox" id="AnyTickler"> AnyTickler</label></li>
 			  </br>
               <li><label><input type="checkbox" id="home"> home </label></li>
 			  <li><label><input type="checkbox" id="homeFreeHands"> homeFreeHands </label></li>
